fix: Prevent crash when mac upload